# AniTracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  linux.yml
anitracker/: __init__.py  __main__.py  anitracker.py  background.py  config.py  parser.py  player.py  resources_rc.py  signals.py
anitracker/gql/: media_collection.gql  queries.py  update_entry.gql  viewer.gql
anitracker/media/: __init__.py  anime.py  manga.py  media.py
anitracker/sync/: anilist.py
anitracker/ui/: __init__.py  about.py  about.ui  anime_info.py  anime_info.ui  app.py  app.ui  episode.py  settings.py  settings.ui
anitracker/utilities/: QProgressIndicator.py  __init__.py  enums.py  subprocess.py
distribute/: anitracker.desktop  anitracker.nsis  build.bat  finish-setup.sh  linux.spec  windows.spec
