[metadata]
name = anitracker
version = 0.3.1
author = Dan Hess
author_email = phxntxm1@gmail.com
description = A tool used to help track, play, and sync anime episodes with services such as anilist
long_description = file: README.md
url = https://github.com/Phxntxm/AniTracker
project_urls = 
    Bug Tracker = https://github.com/Phxntxm/AniTracker
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = .
packages = find:
install_requires = 
    ffmpeg-python==0.2.0
    anitopy==2.0.1
    rapidfuzz==1.4.1
    toml==0.10.2
    requests
    types-requests
    types-toml
python_requires = >=3.8

[options.packages.find]
where = .

[options.entry_points]
console_scripts = 
    anitracker = anitracker.__main__:main